[tool.poetry]
name = "fiis_app"
version = "0.1.0"
description = ""
authors = ["Giancarlo Lester <gatobugado.dev@gmail.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pydantic = "^2.4.2"
pandas = "^2.1.1"
jupyterlab = "^4.0.7"
types-requests = "^2.31.0.10"
sqlalchemy = "^2.0.22"
pydantic-settings = "^2.0.3"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
ruff = "^0.0.292"
mypy = "^1.6.0"
tqdm = "^4.66.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-exclude = ['.venv', '.ruff_cache', '.mypy_cache', '.vscode']
ignore = []
line-length = 100
select = ['E', 'F', 'W']

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
    | .venv
    | .vscode
    | .ruff_cache
    | .mypy_cache
)
'''